--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 
-language: haskell
+language: go
 
 services:
  - docker
@@ -26,6 +26,7 @@ script:
  - if [ ! -d "$HOME/terraform" ]; then rm -rf $HOME/terraform; mkdir $HOME/terraform; curl -fSL "https://releases.hashicorp.com/terraform/0.11.5/terraform_0.11.5_linux_amd64.zip" -o terraform.zip; sudo unzip terraform.zip -d $HOME/terraform; rm -f terraform.zip; fi
  - sudo ln -s $HOME/terraform/terraform /usr/bin/terraform 
 # - docker build -t benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} .
+ - go get -u github.com/ericchiang/terraform-provider-k8s
 
 deploy:
   - provider: script
