--- a/deploy/manifests/app-deployment.yaml
+++ b/deploy/manifests/app-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: snap-deployment
+  namespace: ${namespace}
   labels:
     app: snap
 spec:
