--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
  - if [ ! -d "$HOME/terraform" ]; then rm -rf $HOME/terraform; mkdir $HOME/terraform; curl -fSL "https://releases.hashicorp.com/terraform/0.11.5/terraform_0.11.5_linux_amd64.zip" -o terraform.zip; sudo unzip terraform.zip -d $HOME/terraform; rm -f terraform.zip; fi
  - sudo ln -s $HOME/terraform/terraform /usr/bin/terraform
 # - docker build -t benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} .
- - docker tag benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} benjvi/terraform-cd-example-app:latest
+# - docker tag benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} benjvi/terraform-cd-example-app:latest
  - go get -u github.com/ericchiang/terraform-provider-k8s
  - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.9.6/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
 
