--- a/.travis.yml
+++ b/.travis.yml
@@ -10,27 +10,29 @@ cache:
     - "$HOME/google-cloud-sdk/"
     - "/opt/terraform"
 
-install: true
+install: true 
 
 script:
-# should be on master only
-# - gcloud version || true
-# - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
-# Add gcloud to $PATH
-# - source /home/travis/google-cloud-sdk/path.bash.inc
-# - gcloud version
-# login to gcloud 
+# - docker build -t benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} .
+# - docker tag benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} benjvi/terraform-cd-example-app:latest
+
+before_deploy:
+# configure gcloud
  - openssl aes-256-cbc -K $encrypted_f4a062b8c43d_key -iv $encrypted_f4a062b8c43d_iv -in API\ Project-20f67b6e6d86.json.enc -out $HOME/API\ Project-20f67b6e6d86.json -d
  - gcloud auth activate-service-account --key-file $HOME/API\ Project-20f67b6e6d86.json
  - gcloud config set project parabolic-rope-822
+# setup + configure kubectl
+- curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.9.6/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
+- gcloud container clusters get-credentials test-cluster --zone europe-west2-a
 # install terraform
  - if [ ! -d "$HOME/terraform" ]; then rm -rf $HOME/terraform; mkdir $HOME/terraform; curl -fSL "https://releases.hashicorp.com/terraform/0.11.5/terraform_0.11.5_linux_amd64.zip" -o terraform.zip; sudo unzip terraform.zip -d $HOME/terraform; rm -f terraform.zip; fi
  - sudo ln -s $HOME/terraform/terraform /usr/bin/terraform
-# - docker build -t benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} .
-# - docker tag benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} benjvi/terraform-cd-example-app:latest
+ - cp .terraformrc "$HOME/.terraformrc"
  - go get -u github.com/ericchiang/terraform-provider-k8s
- - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.9.6/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
-
+ - export GOOGLE_APPLICATION_CREDENTIALS="$HOME/API Project-20f67b6e6d86.json" # see GH issue kubernetes/kubernetes #30617
+# login for docker push
+- docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+ 
 deploy:
   - provider: script
     skip_cleanup: true
