fix travis yml syntax

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
 install: true 
 
 script:
+ - echo "skipping build"
 # - docker build -t benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} .
 # - docker tag benjvi/terraform-cd-example-app:${TRAVIS_BUILD_NUMBER} benjvi/terraform-cd-example-app:latest
 
@@ -22,8 +23,8 @@ before_deploy:
  - gcloud auth activate-service-account --key-file $HOME/API\ Project-20f67b6e6d86.json
  - gcloud config set project parabolic-rope-822
 # setup + configure kubectl
-- curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.9.6/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
-- gcloud container clusters get-credentials test-cluster --zone europe-west2-a
+ - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.9.6/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
+ - gcloud container clusters get-credentials test-cluster --zone europe-west2-a
 # install terraform
  - if [ ! -d "$HOME/terraform" ]; then rm -rf $HOME/terraform; mkdir $HOME/terraform; curl -fSL "https://releases.hashicorp.com/terraform/0.11.5/terraform_0.11.5_linux_amd64.zip" -o terraform.zip; sudo unzip terraform.zip -d $HOME/terraform; rm -f terraform.zip; fi
  - sudo ln -s $HOME/terraform/terraform /usr/bin/terraform
@@ -31,7 +32,7 @@ before_deploy:
  - go get -u github.com/ericchiang/terraform-provider-k8s
  - export GOOGLE_APPLICATION_CREDENTIALS="$HOME/API Project-20f67b6e6d86.json" # see GH issue kubernetes/kubernetes #30617
 # login for docker push
-- docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+ - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
  
 deploy:
   - provider: script
