convert hello world to guestbook
fix naming collisions

needed to add count on all db resources

missed one namespace value

was still missing count in db module

fix output interpolation when count is zero

just ignore outputs in db module to avoid count issues

always generate db password even if module conut is 0

change instance name + use locals in package

fix var -> local references

fix gcp region

only run release on master

fix db name

--- a/tf-pkg-src/module/manifests/app-deployment.yaml
+++ b/tf-pkg-src/module/manifests/app-deployment.yaml
@@ -20,3 +20,29 @@ spec:
         image: benjvi/terraform-cd-example-app:${app_version}
         ports:
         - containerPort: 8080
+        env:
+          - name: POSTGRES_DB_HOST
+            value: 127.0.0.1:5432
+          - name: POSTGRES_DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: cloudsql-db-credentials
+                key: username
+          - name: POSTGRES_DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: cloudsql-db-credentials
+                key: password
+      - name: cloudsql-proxy
+        image: gcr.io/cloudsql-docker/gce-proxy:1.11
+        command: ["/cloud_sql_proxy",
+                  "-instances=${instance_connection_name}=tcp:5432",
+                  "-credential_file=/secrets/cloudsql/credentials.json"]
+        volumeMounts:
+          - name: cloudsql-instance-credentials
+            mountPath: /secrets/cloudsql
+            readOnly: true
+      volumes:
+        - name: cloudsql-instance-credentials
+          secret:
+            secretName: cloudsql-instance-credentials
